syntax = "proto3";
package bx2cloud;

option go_package = "github.com/BenasB/bx2cloud/internal/api/gen;api";

import "google/protobuf/timestamp.proto";

service GreetService {
    rpc Greet (GreetingRequest) returns (Greeting);
    rpc ShoutGreet (GreetingRequest) returns (Greeting);
}

message GreetingRequest {
    optional string name = 1;
}

message Greeting {
    string message = 1;
    google.protobuf.Timestamp greetedAt = 2;
}